# condividi_schermo_rust

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  analisi_parti_simili  analisi_parti_simili.md  istruzioni_ubuntu.txt
Main/: Cargo.toml
Main/main_gui/: Cargo.toml
Main/streamer/src/: main.rs
client/: Cargo.toml
client/src/: client_connection.rs  client_icon.rs  main.rs  screen_client.rs
main_gui/src/: main.rs
src/: .gitignore  client.rs  gui.rs  gui_selctor  main.rs  mod.rs  recorder.rs  streamer.rs
src/GUI_ADR/: cropper.rs  gui_test.rs  icon.rs  mod.rs  selector_draw.rs  use iced::time::Instant;.rs
src/connection/: client.rs  server.rs
src/gui/: cropper.rs  gui_main.rs  mod.rs
src/streamer/: client.rs  error.rs  mod.rs  streamer.rs
streamer/: Cargo.toml  client.rs  error.rs  streamer.rs
streamer/src/: connection_server.rs  display.rs  screen_streamer.rs  selector.rs  server_error.rs
