[package]
name = "condividi_schermo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" , tag= "0.23.0" }
cfg-if = "1.0.0"
socket2 = "0.5.7"
iced = { version = "0.13.1", features = ["canvas", "image", "advanced", "tokio"] }
get_if_addrs = "0.5.3"
screenshots = "0.8.10"
rfd = "0.15.1"


[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"





