[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image", "advanced"] }
screenshots = "0.8.10"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" , tag= "0.23.0" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",tag= "0.23.0" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", tag= "0.23.0" }
gstreamer-video = "0.23.0"
gstreamer-rtp = "0.23.0"
gstreamer-rtsp-server = "0.23.0"
cfg-if = "1.0.0"
get_if_addrs = "0.5.3"
objc = "*"
socket2 = "*"
